--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="labelTextInput2">Ingresa el texto con el que vas a comparar</string>
     <string name="button">Comparar</string>
     <string name="textviewResult">Resultado:</string>
+    <string name="titleTextView">Proyecto Final</string>
 </resources>
